<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/as">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            >


            <EditText
                android:id="@+id/tv_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:background="@drawable/login_edit_background"
                android:drawableStart="@drawable/log"
                android:drawablePadding="10dp"
                android:drawableLeft="@drawable/log"
                android:padding="10dp"
                android:textColor="#000000"
                android:textColorHint="@color/text_color"/>

            <EditText
                android:id="@+id/tv_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:layout_marginTop="10dp"
                android:background="@drawable/login_edit_background"
                android:drawableStart="@drawable/pss"
                android:drawablePadding="10dp"
                android:imeOptions="actionDone"
                android:padding="10dp"
                android:textColor="#000000"
                android:textColorHint="@color/text_color"
                android:drawableLeft="@drawable/pss" />

            <Button
                android:id="@+id/btn_log_in"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/button_background"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                />
        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/btn_sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_background2"
        android:padding="15dp"
        android:text="@string/dont_have_account"
        android:textColor="@android:color/white"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:layout_alignParentBottom="true"/>


</RelativeLayout>